# lgeneral

./: AUTHORS  ChangeLog  TODO  acconfig.h  config.h.in  configure.in
lgc-pg/: lgc-pg.1  main.c  misc.c  parser.c  scenarios.c  terrain.c
lgeditor/: Changelog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  findlgen.sh
lgeditor/data/: Makefile.am  Makefile.in
lgeditor/src/: Makefile.am  Makefile.in  data.cpp  data.h  gui.cpp  gui.h  main.cpp  mapview.cpp  mapview.h  mylist.cpp  mylist.h  parser.cpp  parser.h  widgets.cpp  widgets.h
lgeneral/: AUTHORS  CMakeLists.txt  ChangeLog  README.lgeneral  configure.ac  configure.in
lgeneral-redit/src/: misc.c
lgeneral/intl/: localealias.c
lgeneral/lgc-pg/: CMakeLists.txt  Makefile.am  main.c  maps.c  nations.c  parser.c  scenarios.c  shp.c  terrain.c  units.c
lgeneral/lged/: Makefile.am  lged.c
lgeneral/lgeneral-redit/src/: parser.c
lgeneral/src/: CMakeLists.txt  Makefile.am  ai.c  config.c  date.c  engine.c  file.c  gui.c  gui.h  lg-sdl.c  lgeneral.h  main.c  map.c  map.h  parser.c  player.h  purchase_dlg.c  scenario.c  scenario.h  slot.c  strat_map.c  strat_map.h  unit.h  windows.c  windows.h
lgeneral/src/campaigns/: PG
lgeneral/src/gfx/flags/: Makefile.am
lgeneral/src/gfx/units/: Makefile.am
lgeneral/tools/ltrextract/: Makefile.am
lgeneral/util/: CMakeLists.txt  Makefile.am
po/lgeneral/: POTFILES.in
src/: Makefile.am  Makefile.in  ai.c  ai_group.c  engine.c  gui.c  image.c  lg-sdl.c  map.c  misc.c  nation.c  parser.c  purchase_dlg.h  scenario.c  scenario.h  slot.c  unit.c  unit.h  windows.c  windows.h
src/gfx/flags/: Makefile.am
src/gfx/terrain/: Makefile.am
src/gfx/units/: Makefile.am
